@@ -5,6 +5,9 @@ Revision history for Perl extension {{$dist->name}}
     (with a helpful diagnostic) rather than crashing the test script.
   - A script that is killed with a singnal is now considered a failure
     as well.
+  - Use alternate expected exit and signal values with options as the
+    second argument to script_runs.
+  - Ability to pass input via stdin to the scriptwith script_runs.
 
 1.08      2015-05-06 05:09:13 -0400
   - Now works with or without blib (rt81222, rt102743)
